@@ -79,6 +79,9 @@ Trunk (unreleased changes)
     AVRO-199. Make Python test schemas more readable.
     (Jeff Hammerbacher via cutting)
 
+    AVRO-216. Formatting cleanups to schema.py.
+    (Jeff Hammerbacher via cutting)
+
   OPTIMIZATIONS
 
     AVRO-172. More efficient schema processing (massie)
